<resources>
    <string name="app_name">DocDiary</string>
    <string name="appointment_schedule">Appointment Schedule</string>
    <string name="doc_dashboard_name">Dashboard</string>
    <string name="doc_profile">Profile</string>
    <string name="doc_leave">Block Time</string>
    <string name="pat_prescription">Prescription</string>
    <string name="pat_health">Health Progress</string>
    <string name="pat_search">Patient\'s Prescription</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="docs_appointment_schedule">Unit Appointment</string>
    <string name="all_docs_appointment_schedule">All Appointment</string>
    <string name="add_payment">Payment</string>
    <string name="pat_search_admin">Patient Search</string>
    <string name="appointment_modify_bar_name">Appointment</string>
    <string name="report_mang_bar_name">Report Manager</string>
    <string name="hr_acc_bar_name">HR &amp; Accounts</string>
    <string name="acc_dash_bar_name">Accounts Dashboard</string>
    <string name="vou_trans_bar_name">Voucher Transaction</string>
    <string name="pay_invoice_bar_name">Payment Invoice</string>
    <string name="inc_exp_bar_name">Income/Expense Statement</string>
    <string name="daily_state_bar_name">Daily Statement</string>
    <string name="acc_ledger">Account Ledger</string>
    <string name="acc_ledger_pat">Account Ledger (Patient)</string>
    <string name="cva_bar_name">Credit Voucher Approval</string>
    <string name="dva_bar_name">Debit Voucher Approval</string>
    <string name="jva_bar_name">Journal Voucher Approval</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hr_dash_bar_name">HR Dashboard</string>
    <string name="da_bar_name">Daily Attendance</string>
    <string name="emp_att_bar_name">Emp Wise Attendance</string>
    <string name="att_approve_bar_name">Attendance Update Approval</string>
    <string name="le_record_bar_name">Leave Record</string>
    <string name="le_approve_bar_name">Leave Approval</string>
    <string name="lv_bal_bar_name">Leave Balance</string>
    <string name="analytics_dash_bar_name">Analytics Dashboard</string>
    <string name="pat_app_hist_bar_name">Appointment History</string>
    <string name="avail_sch_notes">Do you want to avail this schedule for the patient? This action cannot be undone.You may add comments below if needed.</string>
</resources>